Добавить метод получения корзины, возвращая пустой дто при ее отсутствии, добавить необходимые проверки для методов при работе с заказом, добавить интеграционные тесты для сервиса заказов, изменить логику на постраничное получение книг при выгрузке в excel, изменить реализацию маппера для книг, получая жанры и авторов по id, реализовать запуск образа приложения из докер-контейнера